# card-storage

./: .env  .gitignore  Cargo.toml  card_database  card_database.db  card_database.db-shm  card_database.db-wal  carddatabase.db  text.txt
migrations/: 20230812085411_card.sql
migrations/2023-05-04-054259_create_posts/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
