[package]
name = "card-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.0"
clap = "4.3.2"
# rusqlite = "0.29.0"
scryfall = "0.14.0"
futures = "0.3.28"
tokio = { version = "1.28.2", features = ["full"] }
shlex = "1.1.0"
chrono = "0.4.26"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "sqlite"] }
bytevec = "0.2.0"


[profile.dev.package.sqlx-macros]
opt-level = 3